# polyfit

./: .actrc  .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  readme.md  summary.csv
.github/workflows/: benchmarks.yml  ci.yml
all-results/bench-results-gcc-14/: bench1D_cxx17.json  bench1D_cxx17.txt  bench1D_cxx20.json  bench1D_cxx20.txt  benchMany_cxx17.json  benchMany_cxx17.txt  benchMany_cxx20.json  benchMany_cxx20.txt  bench_ND_cxx17.json  bench_ND_cxx17.txt  bench_ND_cxx20.json  bench_ND_cxx20.txt  bench_horner_cxx17.json  bench_horner_cxx17.txt  bench_horner_cxx20.json  bench_horner_cxx20.txt
all-results/bench-results-gcc-15/: bench1D_cxx17.json  bench1D_cxx17.txt  bench1D_cxx20.json  bench1D_cxx20.txt  benchMany_cxx17.json  benchMany_cxx17.txt  benchMany_cxx20.json  benchMany_cxx20.txt  bench_ND_cxx17.json  bench_ND_cxx17.txt  bench_ND_cxx20.json  bench_ND_cxx20.txt  bench_horner_cxx17.json  bench_horner_cxx17.txt  bench_horner_cxx20.json  bench_horner_cxx20.txt
all-results/bench-results-llvm-20/: bench1D_cxx17.json  bench1D_cxx17.txt  bench1D_cxx20.json  bench1D_cxx20.txt  benchMany_cxx17.json  benchMany_cxx17.txt  benchMany_cxx20.json  benchMany_cxx20.txt  bench_ND_cxx17.json  bench_ND_cxx17.txt  bench_ND_cxx20.json  bench_ND_cxx20.txt  bench_horner_cxx17.json  bench_horner_cxx17.txt  bench_horner_cxx20.json  bench_horner_cxx20.txt
all-results/bench-results-llvm-21/: bench1D_cxx17.json  bench1D_cxx17.txt  bench1D_cxx20.json  bench1D_cxx20.txt  benchMany_cxx17.json  benchMany_cxx17.txt  benchMany_cxx20.json  benchMany_cxx20.txt  bench_ND_cxx17.json  bench_ND_cxx17.txt  bench_ND_cxx20.json  bench_ND_cxx20.txt  bench_horner_cxx17.json  bench_horner_cxx17.txt  bench_horner_cxx20.json  bench_horner_cxx20.txt
benchmark-results/: summary.csv  summary.md
cmake/: PolyfitAmalgamate.cmake  PolyfitDocs.cmake  PolyfitSanitizers.cmake  PolyfitStaticAnalysis.cmake  PolyfitWarnings.cmake  polyfitConfig.cmake.in
docs/: API.md  Doxyfile.in  conf.py  index.rst  install.rst  requirements.txt
docs/guides/: accuracy.rst  fit.rst  func_eval_many.rst  make_func_eval.rst  pack.rst
examples/: CMakeLists.txt  compiletime_1D_eps.cpp  compiletime_1D_fixed.cpp  many_polys_example.cpp  pack.cpp  portable_trig.cpp  portable_trig.hpp  portable_trig_generate.cpp  runtime_1D_eps.cpp  runtime_1D_fixed.cpp  runtime_ND_eps.cpp  runtime_ND_fixed.cpp  tags.cpp
include/polyfit/: fast_eval.hpp  polyeval.hpp  polyfit.hpp
include/polyfit/internal/: api_types.hpp  compiler_macros.h  fast_eval_impl.hpp  feature_macros.h  fit_utils.h  helpers.h  macros.h  macros_undef.h  numeric_utils.h  poly_eval.h  simd_utils.h  tags.h  utils.h
scripts/: amalgamate.py  analyze_bench.py  generate_charts.py  parse_bench.py
tests/: CMakeLists.txt  README.md  bench_1D.cpp  bench_ND.cpp  bench_horner.cpp  bench_many.cpp  bench_unroll_sweep.cpp  test_1D.cpp  test_1D_accuracy.cpp  test_1D_basic.cpp  test_1D_fusion.cpp  test_1D_helpers.h  test_1D_truncation.cpp  test_ND.cpp  test_ND_accuracy.cpp  test_ND_api.cpp  test_ND_fusion.cpp  test_ND_shared.hpp  test_constexpr.cpp  test_copy_move.cpp  test_edge_cases.cpp  test_feature_macros.cpp  test_func_eval_many_padding.cpp  test_general.cpp  test_horner.cpp  test_many.cpp  test_portable_trig.cpp  test_scaling_alignment.cpp  test_utils_bjorck_newton.cpp  test_utils_linspace.cpp
